Changed topbar bg color

--- a/css/style.css
+++ b/css/style.css
@@ -213,7 +213,7 @@ h2 {
     padding: 3px 0;
     font-size: 14px;
     color: #000;
-    background: #FE980F;
+    background: #F4f4f4;
 }
 
 .top-bar i {
