--- a/css/style.css
+++ b/css/style.css
@@ -216,7 +216,7 @@ h2 {
     padding: 3px 0;
     font-size: 14px;
     color: #000;
-    background: #FE980F;
+    background: #f4f4f4;
 }
 
 .top-bar i {
