Changed Navbar icons to default color

--- a/css/style.css
+++ b/css/style.css
@@ -456,7 +456,7 @@ h2 {
 
 
 .header .navbar i {
-    color: #FF6F61;
+    color: #fe980F;
     width: 20px;
     text-align: center;
     margin-right: 8px;
